--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -18,7 +18,13 @@
     "strict": true,
     "noUnusedLocals": true,
     "noUnusedParameters": true,
-    "noFallthroughCasesInSwitch": true
+    "noFallthroughCasesInSwitch": true,
+
+    "baseUrl": ".",
+    "paths": {
+      "@/*": ["src/*"]
+    },
+    "types": ["node", "vite-plugin-svgr/client"]
   },
-  "include": ["src"]
+  "include": ["src", "vite.config.ts"]
 }
