--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -b && vite build",
     "lint": "eslint .",
     "preview": "vite preview",
-    "server": "json-server --watch data/cities.json -p 8000"
+    "server": "npx json-server data/cities.json -p 8000"
   },
   "dependencies": {
     "json-server": "^1.0.0-beta.3",
